<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:background="@color/colorBackground">

    <!-- Timer -->
    <TextView
        android:id="@+id/timer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:text="Time Left: 30"
        android:textColor="@color/colorAccent"
        android:layout_marginBottom="16dp"
        android:layout_gravity="end"/>

    <!-- Question Number -->
    <TextView
        android:id="@+id/QuestionNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/question_number"
        android:textColor="@color/colorProgressBar"
        android:textStyle="bold"
        android:textSize="20sp"
        android:textAlignment="center"
        android:layout_marginBottom="16dp"/>

    <!-- Question Text -->
    <TextView
        android:id="@+id/question"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="16dp"
        android:text="@string/question_1"
        android:textColor="@color/colorTextPrimary"
        android:textSize="25sp"
        android:layout_marginBottom="24dp"/>

    <!-- Options -->
    <LinearLayout
        android:id="@+id/optionsLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="50dp"
        android:paddingRight="50dp"
        android:layout_marginBottom="24dp">

        <TextView
            android:id="@+id/optionA"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/optiondesign"
            android:paddingTop="14dp"
            android:text="@string/question_1A"
            android:textAlignment="center"
            android:textColor="@color/colorPrimary"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/optionB"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/optiondesign"
            android:paddingTop="14dp"
            android:text="@string/question_1B"
            android:textAlignment="center"
            android:textColor="@color/colorPrimary"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/optionC"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/optiondesign"
            android:paddingTop="14dp"
            android:text="@string/question_1C"
            android:textAlignment="center"
            android:textColor="@color/colorPrimary"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/optionD"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/optiondesign"
            android:paddingTop="14dp"
            android:text="@string/question_1D"
            android:textAlignment="center"
            android:textColor="@color/colorPrimary"
            android:textSize="20sp" />
    </LinearLayout>

    <!-- Progress Bar -->
    <ProgressBar
        android:id="@+id/progress_bar"
        style="@android:style/Widget.ProgressBar.Horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/colorProgressBar"
        android:max="100"
        android:progress="1"
        android:layout_marginBottom="24dp" />

    <!-- Score -->
    <TextView
        android:id="@+id/score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textColor="@color/colorAccent"
        android:text="@string/score"
        android:textSize="20sp"
        android:layout_marginBottom="10dp"/>

    <!-- Buttons Layout -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="16dp">

        <!-- Skip Button -->
        <Button
            android:id="@+id/skipButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Skip"
            android:backgroundTint="@color/colorButtonSkip"
            android:textColor="@color/colorTextPrimary"
            android:layout_marginEnd="20dp"/>

        <!-- Hint Button -->
        <Button
            android:id="@+id/hintButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Hint"
            android:backgroundTint="@color/colorButtonHint"
            android:textColor="@color/colorTextPrimary"/>
    </LinearLayout>

    <!-- Select Option and Correct Answer (Initially Hidden) -->
    <LinearLayout
        android:id="@+id/selectOptionLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10dp"
        android:layout_marginBottom="16dp"
        android:layout_gravity="bottom">

        <TextView
            android:id="@+id/selectoption"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/selctedoption"
            android:visibility="gone"
            android:textAlignment="center"
            android:textColor="@color/colorTextPrimary"/>

        <TextView
            android:id="@+id/CorrectAnswer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/correctanswer"
            android:visibility="gone"
            android:textAlignment="center"
            android:textColor="@color/colorTextPrimary"/>
    </LinearLayout>

</LinearLayout>
